tests/neg/deferred-patdef.scala
object M {
  val (x, y): (Int, Int)  // error: `=` expected
  val 1: Int              // error: `=` expected
}
